# powerplant-coding-challenge

./: Dockerfile  README.md  client.py  install.sh  powerplant_payload.py  pyproject.toml  run.sh  server.py
