[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Coding challenge project"
authors = ["Hynek Lavicka <h.lavicka@email.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
